--- a/Vista/Transport/Login/login.html
+++ b/Vista/Transport/Login/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+  
     <title>SleepShift Transports</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <h1>SleepShift Transports</h1>
             <div class="login-form">
                 <h2>Iniciar Sesión</h2>
-                <form>
+                <form id="login-form">
                     <label for="username">Usuario:</label>
                     <input type="text" id="username" name="username" required>
                     <br>
@@ -24,7 +25,31 @@
             </div>
         </div>
     </div>
-    <img src="../imagenes/logo.png" alt="Logo SleepShift Transports" class="logo">
+    <script>
+    document.addEventListener("DOMContentLoaded", function () {
+    const loginForm = document.getElementById("login-form");
 
+    if (loginForm) { // Verifica que el formulario existe
+        loginForm.addEventListener("submit", function (event) {
+            event.preventDefault(); 
+
+            const usernameInput = document.getElementById("username");
+            const passwordInput = document.getElementById("password");
+
+            const username = usernameInput.value;
+            const password = passwordInput.value;
+
+            if (username === "admin" && password === "1234") {
+                window.location.href = "../Index/index.html";
+            } else {
+                alert("Usuario o contraseña incorrectos");
+            }
+        });
+    } else {
+        console.error("El elemento 'login-form' no se encuentra en el DOM.");
+    }
+});
+    </script>
+    <img src="../imagenes/logo.png" alt="Logo SleepShift Transports" class="logo">
 </body>
 </html>
