--- a/Vista/Transport/Index/index.html
+++ b/Vista/Transport/Index/index.html
@@ -16,10 +16,10 @@
         <li><a href="#" id="viajes-link">Viajes</a></li>
         <li><a href="#" id="costos-link">Costos</a></li>
         <li><a href="#">Reportes</a></li>
-        <li><a href="#">Unidades</a></li>
+        <li><a href="#" id="unidades-link">Unidades</a></li>
         <li><a href="#">Solicitudes</a></li>
         <li><a href="#" id="limpiar-link">Limpiar</a></li>
-        <li><a href="#">Salir</a></li>
+        <li><a href="#" id="salir-link">Salir</a></li>
     </ul>
     <div id="contenido-debajo-submenu"></div>
     <div id="conductores-info" class="info">
@@ -34,6 +34,10 @@
         <p>Los costos son:</p>
         <ul></ul>
     </div>
+    <div id="unidades-info" class="info">
+        <p>Las unidades de buses disponibles son:</p>
+        <ul></ul>
+    </div>    
     <img src="../imagenes/logo.png" alt="Logo SleepShift Transports" class="logo">  
     <img src="../imagenes/logo.png" alt="Logo SleepShift Transports" class="logo2"> 
 
